# name: test_find[uvloop]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited Prunus virus E',
        'id': '6116cba1.1',
        'index': <class 'dict'> {
          'id': 'unbuilt',
          'version': 'unbuilt',
        },
        'method_name': 'edit',
        'otu': <class 'dict'> {
          'id': '6116cba1',
          'name': 'Prunus virus F',
          'version': 1,
        },
        'reference': <class 'dict'> {
          'id': 'hxn167',
        },
        'user': <class 'dict'> {
          'id': 'test',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited Prunus virus E',
        'id': 'foobar.1',
        'index': <class 'dict'> {
          'id': 'unbuilt',
          'version': 'unbuilt',
        },
        'method_name': 'edit',
        'otu': <class 'dict'> {
          'id': '6116cba1',
          'name': 'Prunus virus F',
          'version': 1,
        },
        'reference': <class 'dict'> {
          'id': 'hxn167',
        },
        'user': <class 'dict'> {
          'id': 'test',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited Prunus virus E',
        'id': 'foobar.2',
        'index': <class 'dict'> {
          'id': 'unbuilt',
          'version': 'unbuilt',
        },
        'method_name': 'edit',
        'otu': <class 'dict'> {
          'id': '6116cba1',
          'name': 'Prunus virus F',
          'version': 1,
        },
        'reference': <class 'dict'> {
          'id': 'hxn167',
        },
        'user': <class 'dict'> {
          'id': 'test',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'description': 'Edited Prunus virus E',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'abbreviation',
        <class 'list'> [
          'PVF',
          '',
        ],
      ],
      <class 'list'> [
        'change',
        'name',
        <class 'list'> [
          'Prunus virus F',
          'Prunus virus E',
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
    ],
    'id': '6116cba1.1',
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'edit',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: test_revert[True-uvloop-False-None]
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'TST',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_revert[True-uvloop-False-None].1
  <class 'list'> [
    <class 'dict'> {
      '_id': '6116cba1.0',
      'created_at': datetime.datetime(2017, 7, 12, 16, 0, 50, 495000),
      'description': 'Description',
      'diff': <class 'dict'> {
        '_id': '6116cba1',
        'abbreviation': 'PVF',
        'imported': True,
        'isolates': <class 'list'> [
          <class 'dict'> {
            'default': True,
            'id': 'cab8b360',
            'sequences': <class 'list'> [
              <class 'dict'> {
                '_id': 'KX269872',
                'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
                'host': 'sweet cherry',
                'isolate_id': 'cab8b360',
                'otu_id': '6116cba1',
                'segment': None,
                'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
              },
            ],
            'source_name': '8816-v2',
            'source_type': 'isolate',
          },
        ],
        'last_indexed_version': 0,
        'lower_name': 'prunus virus f',
        'name': 'Prunus virus F',
        'reference': <class 'dict'> {
          'id': 'hxn167',
        },
        'schema': <class 'list'> [
        ],
        'verified': False,
        'version': 0,
      },
      'index': <class 'dict'> {
        'id': 'unbuilt',
        'version': 'unbuilt',
      },
      'method_name': 'create',
      'otu': <class 'dict'> {
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 0,
      },
      'reference': <class 'dict'> {
        'id': 'hxn167',
      },
      'user': <class 'dict'> {
        'id': 'test',
      },
    },
    <class 'dict'> {
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2017, 7, 12, 16, 0, 50, 600000),
      'description': 'Description',
      'diff': <class 'list'> [
        <class 'list'> [
          'change',
          'version',
          <class 'list'> [
            0,
            1,
          ],
        ],
        <class 'list'> [
          'change',
          'abbreviation',
          <class 'list'> [
            'PVF',
            'TST',
          ],
        ],
      ],
      'index': <class 'dict'> {
        'id': 'unbuilt',
        'version': 'unbuilt',
      },
      'method_name': 'update',
      'otu': <class 'dict'> {
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      },
      'reference': <class 'dict'> {
        'id': 'hxn167',
      },
      'user': <class 'dict'> {
        'id': 'test',
      },
    },
  ]
---
# name: test_revert[True-uvloop-False-None].2
  <class 'list'> [
    <class 'dict'> {
      '_id': 'KX269872',
      'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
      'host': 'sweet cherry',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'segment': None,
      'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
    },
  ]
---
# name: test_revert[True-uvloop-True-None]
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'TST',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_revert[True-uvloop-True-None].1
  <class 'list'> [
    <class 'dict'> {
      '_id': '6116cba1.0',
      'created_at': datetime.datetime(2017, 7, 12, 16, 0, 50, 495000),
      'description': 'Description',
      'diff': <class 'dict'> {
        '_id': '6116cba1',
        'abbreviation': 'PVF',
        'imported': True,
        'isolates': <class 'list'> [
          <class 'dict'> {
            'default': True,
            'id': 'cab8b360',
            'sequences': <class 'list'> [
              <class 'dict'> {
                '_id': 'KX269872',
                'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
                'host': 'sweet cherry',
                'isolate_id': 'cab8b360',
                'otu_id': '6116cba1',
                'segment': None,
                'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
              },
            ],
            'source_name': '8816-v2',
            'source_type': 'isolate',
          },
        ],
        'last_indexed_version': 0,
        'lower_name': 'prunus virus f',
        'name': 'Prunus virus F',
        'reference': <class 'dict'> {
          'id': 'hxn167',
        },
        'schema': <class 'list'> [
        ],
        'verified': False,
        'version': 0,
      },
      'index': <class 'dict'> {
        'id': 'unbuilt',
        'version': 'unbuilt',
      },
      'method_name': 'create',
      'otu': <class 'dict'> {
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 0,
      },
      'reference': <class 'dict'> {
        'id': 'hxn167',
      },
      'user': <class 'dict'> {
        'id': 'test',
      },
    },
    <class 'dict'> {
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2017, 7, 12, 16, 0, 50, 600000),
      'description': 'Description',
      'diff': <class 'list'> [
        <class 'list'> [
          'change',
          'version',
          <class 'list'> [
            0,
            1,
          ],
        ],
        <class 'list'> [
          'change',
          'abbreviation',
          <class 'list'> [
            'PVF',
            'TST',
          ],
        ],
      ],
      'index': <class 'dict'> {
        'id': 'unbuilt',
        'version': 'unbuilt',
      },
      'method_name': 'update',
      'otu': <class 'dict'> {
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      },
      'reference': <class 'dict'> {
        'id': 'hxn167',
      },
      'user': <class 'dict'> {
        'id': 'test',
      },
    },
  ]
---
# name: test_revert[True-uvloop-True-None].2
  <class 'list'> [
    <class 'dict'> {
      '_id': 'KX269872',
      'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
      'host': 'sweet cherry',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'segment': None,
      'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
    },
  ]
---
